@@ -18,6 +18,8 @@ Forthcoming
 - Wireless
     - Added Taiwan region code for wireless devices
 - Inertial
+    - RENAMED InertialTypes::GNSS_Source::INTERNAL_GNSS -> INTERNAL_GNSS_ALL
+    - Added MipNodeFeatures::supportedGnssSources() to lookup supported GNSS Aiding Source options
     - Updated GPS Ionospheric Corrections alpha and beta value types to Vector
     - Automatically detect and add required parameters for save as startup, load startup, and default settings command functions
     - Added support for MIP data:
